--- a/apollo/process_analysis/templates/process_analysis/critical_incidents_locations.html
+++ b/apollo/process_analysis/templates/process_analysis/critical_incidents_locations.html
@@ -39,12 +39,12 @@
             </tr>
             {% for incident in incidents %}
             <tr>
-              <td>{{ incident.contributor.participant_id|default }}</td>
-              <td>{{ incident.contributor.name|default }}</td>
+              <td>{{ incident.participant.participant_id|default }}</td>
+              <td>{{ incident.participant.name|default }}</td>
               {% for lt in location_types %}
               <td>{{ incident|get_location_for_type(lt) }}</td>
               {% endfor %}
-              <td>{{ incident.location }} &middot; <em class"muted">{{ incident.location.location_type }}</em></td>
+              <td>{{ incident.location.name }} &middot; <em class"muted">{{ incident.location.location_type }}</em></td>
               <td style="text-align:center">
               {% if incident.status == 'confirmed' %}
               <img src="{{ url_for('static', filename='img/tick.png') }}" title="{{ _('Confirmed') }}" alt="{{ _('Confirmed') }}" />
@@ -54,7 +54,7 @@
               <img src="{{ url_for('static', filename='img/caution.png') }}" title="{{ _('Unmarked') }}" alt="{{ _('Unmarked') }}" />
               {% endif %}
               </td>
-              <td>{{ incident.incident_comment }}</td>
+              <td>{{ incident.incident_description }}</td>
             </tr>
             {% endfor %}
           </table>
