--- a/apollo/frontend/templates/frontend/location_list.html
+++ b/apollo/frontend/templates/frontend/location_list.html
@@ -62,25 +62,21 @@
     <table class="table table-striped table-bordered table-hover">
       <thead>
         <tr>
-          <th class="shrink" width="1px"><input type="checkbox" class="checked" id="select_all" name="select_all"></th>
-          <th class="shrink" width="1px">{{ _('Code') }}</th>
+          <th class="text-center shrink" width="1px">{{ _('Code') }}</th>
           <th>{{ _('Name') }}</th>
           <th class="shrink">{{ _('Type') }}</th>
-          <th class="text-center shrink" width="1px">{{ _('Edit') }}</th>
         </tr>
       </thead>
       <tbody>
         {% for location in locations.items %}
         <tr>
-          <td class="shrink"><input type="checkbox" class="checked" name="ids" value="{{ location.id }}"></td>
-          <td class="shrink">{{ location.code }}</td>
+          <td class="text-center shrink"><a href="{{ url_for('locations.location_edit', id=location.id) }}">{{ location.code }}</a></td>
           <td>{{ location.name }}</td>
           <td class="shrink">{{ location.location_type.name }}</td>
-          <td class="text-center shrink"><a href="{{ url_for('locations.location_edit', id=location.id) }}">{{ _('Edit') }}</a></td>
         </tr>
         {% else %}
         <tr class="warning">
-          <td class="text-center" colspan="5">{{ _('No Data Available') }}</td>
+          <td class="text-center" colspan="3">{{ _('No Data Available') }}</td>
         </tr>
         {% endfor %}
       </tbody>
