--- a/apollo/frontend/templates/frontend/macros/submission_list_macros.html
+++ b/apollo/frontend/templates/frontend/macros/submission_list_macros.html
@@ -25,7 +25,7 @@
 <tr>
     <td>{{ submission.participant.participant_id }}</td>
     {% for location_type in location_types %}
-    <td>{{ submission.location_name_path[location_type.name] }}</td>
+    <td>{{ submission.location.make_path()[location_type.name] }}</td>
     {% endfor %}
     <td>{{ submission.participant.name|default('', true) }}</td>
     <td>{{ submission.participant.primary_phone|default('', true) }}</td>
