--- a/apollo/frontend/templates/frontend/macros/quality_assurance_list_macros.html
+++ b/apollo/frontend/templates/frontend/macros/quality_assurance_list_macros.html
@@ -18,7 +18,7 @@
 <tr>
     <td>{{ submission.contributor.participant_id }}</td>
     {% for location_type in location_types %}
-    <td>{{ submission.location_name_path[location_type.name] }}</td>
+    <td>{{ submission.location.make_path()[location_type.name] }}</td>
     {% endfor %}
     <td>{{ submission.contributor.name|default('', true) }}</td>
     <td>{{ submission.contributor.phone|default('', true) }}</td>
