--- a/apollo/frontend/templates/frontend/participant_performance_list.html
+++ b/apollo/frontend/templates/frontend/participant_performance_list.html
@@ -65,7 +65,7 @@ a:hover.arrow-style{text-decoration:none; color:#333;}
                <td><input type="checkbox" class="checked" name="ids" value="{{ participant.id }}"></td>
                <td>{{ participant.participant_id }}</td>
                {%- for location_type in location_types -%}
-               <td>{{ participant.location_name_path[location_type.name] }}</td>
+               <td>{{ participant.location.make_path()[location_type.name] }}</td>
                {%- endfor -%}
                <td>{{ participant.location.name|default('N/A', true) }}</td>
                <td>{{ participant.name|default('', true) }}</td>
