--- a/apollo/frontend/templates/frontend/macros/submission_list_macros.html
+++ b/apollo/frontend/templates/frontend/macros/submission_list_macros.html
@@ -1,6 +1,6 @@
 {% macro submission_header(form, form_fields, location_types, perms) %}
 <tr>
-    <th>{{ _('ID') }}</th>
+    <th class="text-center">{{ _('ID') }}</th>
     {% for location_type in location_types %}
     <th>{{ location_type.name }}</th>
     {% endfor %}
@@ -17,13 +17,16 @@
     <th class="text-center"><abbr title="{{ _('Status') }}"><i class="glyphicon glyphicon-eye-open"></i></abbr></th>
     {% endif %}
     <th class="text-center"><abbr title="{{ _('Phone Verification') }}"><i class="glyphicon glyphicon-phone"></i></abbr></th>
-    {% if perms.edit_submission.can() %}<th class="text-center">{{ _('Edit') }}</th>{% endif %}
 </tr>
 {% endmacro %}
 {% macro submission_items(submissions, form, form_fields, location_types, perms) %}
 {% for submission in submissions %}
 <tr>
-    <td>{{ submission.participant.participant_id }}</td>
+    {% if perms.edit_submission.can() %}
+    <td class="text-center"><a href="{{ url_for('submissions.submission_edit', submission_id=submission.id) }}">{{ submission.participant.participant_id }}</a></td>
+    {% else %}
+    <td class="text-center">{{ submission.participant.participant_id }}</td>
+    {% endif %}
     {% for location_type in location_types %}
     <td>{{ submission.location.make_path()[location_type.name] }}</td>
     {% endfor %}
@@ -77,22 +80,9 @@
       <i class="fa fa-exclamation-triangle warning" aria-hidden="true" title="{{ _('Unverified') }}"></i>
       {% endif %}
     </td>
-    {% if perms.edit_submission.can() %}<td class="text-center"><a href="{{ url_for('submissions.submission_edit', submission_id=submission.id) }}">{{ _('Edit') }}</a></td>{% endif %}
 </tr>
 {% else %}
 {% if perms.edit_submission.can() %}
-{% if form.form_type == 'CHECKLIST' %}
-{%- set colspan = 5 + (location_types|length) + form.data.groups|length -%}
-<tr class="warning">
-    <td class="text-center" colspan="{{ colspan }}">{{ _('No Data Available') }}</td>
-</tr>
-{% else %}
-{%- set colspan = 6 + (location_types|length) + form_fields|length -%}
-<tr class="warning">
-    <td class="text-center" colspan="{{ colspan }}">{{ _('No Data Available') }}</td>
-</tr>
-{% endif %}
-{% else %}
 {% if form.form_type == 'CHECKLIST' %}
 {%- set colspan = 4 + (location_types|length) + form.data.groups|length -%}
 <tr class="warning">
@@ -100,6 +90,18 @@
 </tr>
 {% else %}
 {%- set colspan = 5 + (location_types|length) + form_fields|length -%}
+<tr class="warning">
+    <td class="text-center" colspan="{{ colspan }}">{{ _('No Data Available') }}</td>
+</tr>
+{% endif %}
+{% else %}
+{% if form.form_type == 'CHECKLIST' %}
+{%- set colspan = 3 + (location_types|length) + form.data.groups|length -%}
+<tr class="warning">
+    <td class="text-center" colspan="{{ colspan }}">{{ _('No Data Available') }}</td>
+</tr>
+{% else %}
+{%- set colspan = 4 + (location_types|length) + form_fields|length -%}
 <tr class="warning">
     <td class="text-center" colspan="{{ colspan }}">{{ _('No Data Available') }}</td>
 </tr>
