--- a/apollo/frontend/templates/frontend/location_builder.html
+++ b/apollo/frontend/templates/frontend/location_builder.html
@@ -49,6 +49,21 @@
                   <input type="checkbox" name="is_political" id="addDivisionPolitical" value="true" /> {{ _('Political Division') }}
                 </label>
               </div>
+              <div class="checkbox">
+                <label for="addDivisionPoliticalCode">
+                  <input type="checkbox" name="has_political_code" id="addDivisionPoliticalCode" value="true" /> {{ _('Has geopolitical code') }}
+                </label>
+              </div>
+              <div class="checkbox">
+                <label for="addDivisionOtherCode">
+                  <input type="checkbox" name="has_other_code" id="addDivisionOtherCode" value="true" /> {{ _('Has other code') }}
+                </label>
+              </div>
+              <div class="checkbox">
+                <label for="addDivisionRegisteredVoters">
+                  <input type="checkbox" name="has_registered_voters" id="addDivisionRegisteredVoters" value="true" /> {{ _('Has registered voters') }}
+                </label>
+              </div>
             </div>
           </div>
       </div>
@@ -93,6 +108,21 @@
               <div class="checkbox">
                 <label for="updateDivisionPolitical">
                   <input type="checkbox" name="is_political" id="updateDivisionPolitical" value="true" /> {{ _('Political Division') }}
+                </label>
+              </div>
+              <div class="checkbox">
+                <label for="updateDivisionPoliticalCode">
+                  <input type="checkbox" name="has_political_code" id="updateDivisionPoliticalCode" value="true" /> {{ _('Has geopolitical code') }}
+                </label>
+              </div>
+              <div class="checkbox">
+                <label for="updateDivisionOtherCode">
+                  <input type="checkbox" name="has_other_code" id="updateDivisionOtherCode" value="true" /> {{ _('Has other code') }}
+                </label>
+              </div>
+              <div class="checkbox">
+                <label for="updateDivisionRegisteredVoters">
+                  <input type="checkbox" name="has_registered_voters" id="updateDivisionRegisteredVoters" value="true" /> {{ _('Has registered voters') }}
                 </label>
               </div>
             </div>
