--- a/apollo/frontend/templates/frontend/location_builder.html
+++ b/apollo/frontend/templates/frontend/location_builder.html
@@ -151,8 +151,8 @@
 </div>
 {%- endif -%}
 <div class="row">
-  <div class="col-md-10 col-md-offset-2">
-    <div id="paper" style="margin-top: 5em" data-graph='{{ location_set.admin_divisions_graph }}'></div>
+  <div class="col-md-10 col-md-offset-1">
+    <div id="paper" style="margin-top: 5em; border: 1px solid #000;" data-graph='{{ location_set.admin_divisions_graph }}'></div>
   </div>
 </div>
 {% endblock %}
