--- a/apollo/frontend/templates/admin/macros.html
+++ b/apollo/frontend/templates/admin/macros.html
@@ -15,7 +15,7 @@
 {% macro samples_list(model, column) %}
 <div class="btn-group btn-group-sm" role="group" aria-label="...">
   <a href="javascript:;" class="btn btn-default disabled">{{ model.samples.count() }}</a>
-  <a href="javascript:;" class="btn btn-default disabled">Manage</a>
+  <a href="{{ url_for('locations.sample_list', location_set_id=model.id) }}" class="btn btn-default">Manage</a>
 </div>
 {% endmacro %}
 
