Fixed issue with invalid missing reports in checklist data summary Fixed typo in incident summary template

--- a/apollo/process_analysis/templates/process_analysis/critical_incident_summary.html
+++ b/apollo/process_analysis/templates/process_analysis/critical_incident_summary.html
@@ -68,7 +68,7 @@
 					{% for group in field_groups %}
 					{% if field_groups[group] %}
 					<h4>{{ group }}</h4>
-						{% for field in field_groups[group] if not field.['type'] == 'boolean' %}
+						{% for field in field_groups[group] if not field['type'] == 'boolean' %}
 							{% set question_summary = form|checklist_question_summary(field, location, dataframe) %}
 							{% set stats = question_summary.stats %}
 							<table width="100%" class="table table-striped table-bordered">
