--- a/apollo/frontend/templates/frontend/sample_list.html
+++ b/apollo/frontend/templates/frontend/sample_list.html
@@ -11,7 +11,7 @@
       <thead>
         <tr>
           <th>{{ _('Name') }}</th>
-          <th class="shrink text-center">{{ _('Location count') }}</th>
+          <th class="shrink text-center">{{ _('Number of Locations') }}</th>
         </tr>
       </thead>
       <tbody>
