--- a/apollo/frontend/templates/frontend/location_list.html
+++ b/apollo/frontend/templates/frontend/location_list.html
@@ -62,7 +62,7 @@
     <table class="table table-striped table-bordered table-hover">
       <thead>
         <tr>
-          <th class="text-center shrink" width="1px">{{ _('Code') }}</th>
+          <th class="text-right shrink" width="1px">{{ _('Code') }}</th>
           <th>{{ _('Name') }}</th>
           <th class="shrink">{{ _('Type') }}</th>
         </tr>
@@ -70,7 +70,7 @@
       <tbody>
         {% for location in locations.items %}
         <tr>
-          <td class="text-center shrink"><a href="{{ url_for('locations.location_edit', id=location.id) }}">{{ location.code }}</a></td>
+          <td class="text-right shrink"><a href="{{ url_for('locations.location_edit', id=location.id) }}">{{ location.code }}</a></td>
           <td>{{ location.name }}</td>
           <td class="shrink">{{ location.location_type.name }}</td>
         </tr>
