Don't render import button if there are already admin divisions present

--- a/apollo/frontend/templates/frontend/location_builder.html
+++ b/apollo/frontend/templates/frontend/location_builder.html
@@ -13,7 +13,9 @@
 <div class="btn-group pull-right">
   <button style="margin-right:1em" type="button" class="btn btn-sm btn-default" id="addDivisionButton"><i class="glyphicon glyphicon-plus"></i> {{ _('Add Division') }}</button>
   <a href="{{ url_for('locations.export_divisions', location_set_id=location_set.id) }}" class="btn btn-sm btn-default"><i class="glyphicon glyphicon-download"></i> {{ _('Export') }}</a>
+  {% if not has_admin_divisions %}
   <button class="btn btn-sm btn-default" data-toggle="modal" data-target="#importModal"><i class="glyphicon glyphicon-upload"></i> {{ _('Import') }}</button>
+  {% endif %}
 </div>
 {% endblock toolbar %}
 {% block content %}
@@ -139,6 +141,7 @@
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
+{% if not has_admin_divisions %}
 <div class="modal fade" id="importModal" role="dialog" aria-labelledby="importModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -161,6 +164,7 @@
     </div>
   </div>
 </div>
+{% endif %}
 {%- set flash_msgs = get_flashed_messages(category_filter=['locations_builder']) -%}
 {%- if flash_msgs -%}
 <div class="row">
