Minor mimetype update

--- a/apollo/frontend/templates/frontend/location_builder.html
+++ b/apollo/frontend/templates/frontend/location_builder.html
@@ -1,6 +1,6 @@
 {% extends 'frontend/_layout.html' %}
 {% block stylesheets %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/joint.min.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/joint.min.css') }}">
 {% endblock stylesheets %}
 {% block toolbar %}
 <div class="btn-group pull-right">
