--- a/apollo/frontend/templates/frontend/location_builder.html
+++ b/apollo/frontend/templates/frontend/location_builder.html
@@ -53,20 +53,31 @@
                   <input type="checkbox" name="is_political" id="addDivisionPolitical" value="true" /> {{ _('Political Division') }}
                 </label>
               </div>
-              <div class="checkbox">
-                <label for="addDivisionPoliticalCode">
-                  <input type="checkbox" name="has_political_code" id="addDivisionPoliticalCode" value="true" /> {{ _('Has geopolitical code') }}
-                </label>
-              </div>
-              <div class="checkbox">
-                <label for="addDivisionOtherCode">
-                  <input type="checkbox" name="has_other_code" id="addDivisionOtherCode" value="true" /> {{ _('Has other code') }}
-                </label>
-              </div>
-              <div class="checkbox">
-                <label for="addDivisionRegisteredVoters">
-                  <input type="checkbox" name="has_registered_voters" id="addDivisionRegisteredVoters" value="true" /> {{ _('Has registered voters') }}
-                </label>
+              <div class="panel-group" id="accordion-add" role="tablist" aria-multiselectable="true">
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="add-heading">
+                    <h4 class="panel-title"><a role="button" data-toggle="collapse" data-parent="accordion-add" aria-expanded="true" aria-controls="add-extra-options" href="#add-extra-options">More options</a></h4>
+                  </div>
+                  <div id="add-extra-options" class="panel-collapse collapse" role="tabpanel" aria-labelledby="add-heading">
+                    <div class="panel-body">
+                      <div class="checkbox">
+                        <label for="addDivisionPoliticalCode">
+                          <input type="checkbox" name="has_political_code" id="addDivisionPoliticalCode" value="true" /> {{ _('Has geopolitical code') }}
+                        </label>
+                      </div>
+                      <div class="checkbox">
+                        <label for="addDivisionOtherCode">
+                          <input type="checkbox" name="has_other_code" id="addDivisionOtherCode" value="true" /> {{ _('Has other code') }}
+                        </label>
+                      </div>
+                      <div class="checkbox">
+                        <label for="addDivisionRegisteredVoters">
+                          <input type="checkbox" name="has_registered_voters" id="addDivisionRegisteredVoters" value="true" /> {{ _('Has registered voters') }}
+                        </label>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -88,49 +99,60 @@
       </div>
       <form role="form" class="form-horizontal">
       <div class="modal-body" style="padding-bottom:5px">
-          <div class="form-group">
-            <label for="name" class="col-sm-2 control-label">{{ _('Name') }}</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="updateDivisionName" name="name">
+        <div class="form-group">
+          <label for="name" class="col-sm-2 control-label">{{ _('Name') }}</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="updateDivisionName" name="name">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="parents" class="col-sm-2 control-label">{{ _('Parents') }}</label>
+          <div class="col-sm-10">
+            <select multiple="multiple" class="form-control" name="parents" id="updateDivisionParents">
+            </select>
+            <input type="hidden" class="form-control" id="updateDivisionId" name="id">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-10 col-sm-offset-2">
+            <div class="checkbox">
+              <label for="updateDivisionAdministrative">
+                <input type="checkbox" name="is_administrative" id="updateDivisionAdministrative" value="true" /> {{ _('Administrative Division') }}
+              </label>
+            </div>
+            <div class="checkbox">
+              <label for="updateDivisionPolitical">
+                <input type="checkbox" name="is_political" id="updateDivisionPolitical" value="true" /> {{ _('Political Division') }}
+              </label>
+            </div>
+            <div class="panel-group" id="accordion-update" role="tablist" aria-multiselectable="true">
+              <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="update-heading">
+                  <h4 class="panel-title"><a role="button" data-toggle="collapse" data-parent="accordion-update" aria-expanded="true" aria-controls="update-extra-options" href="#update-extra-options">More options</a></h4>
+                </div>
+                <div id="update-extra-options" class="panel-collapse collapse" role="tabpanel" aria-labelledby="update-heading">
+                  <div class="panel-body">
+                    <div class="checkbox">
+                      <label for="updateDivisionPoliticalCode">
+                        <input type="checkbox" name="has_political_code" id="updateDivisionPoliticalCode" value="true" /> {{ _('Has geopolitical code') }}
+                      </label>
+                    </div>
+                    <div class="checkbox">
+                      <label for="updateDivisionOtherCode">
+                        <input type="checkbox" name="has_other_code" id="updateDivisionOtherCode" value="true" /> {{ _('Has other code') }}
+                      </label>
+                    </div>
+                    <div class="checkbox">
+                      <label for="updateDivisionRegisteredVoters">
+                        <input type="checkbox" name="has_registered_voters" id="updateDivisionRegisteredVoters" value="true" /> {{ _('Has registered voters') }}
+                      </label>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="form-group">
-            <label for="parents" class="col-sm-2 control-label">{{ _('Parents') }}</label>
-            <div class="col-sm-10">
-              <select multiple="multiple" class="form-control" name="parents" id="updateDivisionParents">
-              </select>
-              <input type="hidden" class="form-control" id="updateDivisionId" name="id">
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="col-sm-10 col-sm-offset-2">
-              <div class="checkbox">
-                <label for="updateDivisionAdministrative">
-                  <input type="checkbox" name="is_administrative" id="updateDivisionAdministrative" value="true" /> {{ _('Administrative Division') }}
-                </label>
-              </div>
-              <div class="checkbox">
-                <label for="updateDivisionPolitical">
-                  <input type="checkbox" name="is_political" id="updateDivisionPolitical" value="true" /> {{ _('Political Division') }}
-                </label>
-              </div>
-              <div class="checkbox">
-                <label for="updateDivisionPoliticalCode">
-                  <input type="checkbox" name="has_political_code" id="updateDivisionPoliticalCode" value="true" /> {{ _('Has geopolitical code') }}
-                </label>
-              </div>
-              <div class="checkbox">
-                <label for="updateDivisionOtherCode">
-                  <input type="checkbox" name="has_other_code" id="updateDivisionOtherCode" value="true" /> {{ _('Has other code') }}
-                </label>
-              </div>
-              <div class="checkbox">
-                <label for="updateDivisionRegisteredVoters">
-                  <input type="checkbox" name="has_registered_voters" id="updateDivisionRegisteredVoters" value="true" /> {{ _('Has registered voters') }}
-                </label>
-              </div>
-            </div>
-          </div>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">{{ _('Close') }}</button>
