--- a/apollo/frontend/templates/frontend/macros/participant_header_form.html
+++ b/apollo/frontend/templates/frontend/macros/participant_header_form.html
@@ -1,7 +1,7 @@
 {% macro render_mapping_form(form) %}
 <div class="col-sm-10">
 	{{ form.hidden_tag() }}
-	<input type="hidden" name="action" id="form-action" value="{{ request.url }}">
+	<input type="hidden" name="action" id="form-action" value="{{ request.full_path }}">
 	{%- for field in form -%}
 	{%- if field.type != 'CSRFTokenField' -%}
 	<div class="form-group {% if field.errors %}has-error{% endif %}">
