--- a/apollo/frontend/templates/frontend/macros/send_message.html
+++ b/apollo/frontend/templates/frontend/macros/send_message.html
@@ -51,7 +51,7 @@
     var message = $('#message').val();
     if (message) {
       $.ajax({
-        url: "{{ request.url | safe }}",
+        url: "{{ request.full_path | safe }}",
         type: 'POST',
         data: {message: message, action: 'send_message', },
         beforeSend: function (xhr, settings) {
