--- a/apollo/frontend/templates/frontend/message_list.html
+++ b/apollo/frontend/templates/frontend/message_list.html
@@ -14,7 +14,7 @@
 <div class="row">
   <div class="col-md-12">
     <div class="well well-sm filter">
-      <form action="{{ request.url }}" method="GET" id="filter" class="form-inline">
+      <form method="GET" id="filter" class="form-inline">
         <div class="form-group">
           {{ filter_form.mobile(class_="form-control span2 input-sm", placeholder=_("Mobile")) }}
         </div>
