--- a/apollo/frontend/templates/frontend/participant_edit_modal.html
+++ b/apollo/frontend/templates/frontend/participant_edit_modal.html
@@ -1,4 +1,4 @@
-<form class="form-horizontal" method="POST" action="{{ request.url }}">
+<form class="form-horizontal" method="POST">
 <div class="modal-header">
   <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
   <h4 class="modal-title" id="myModalLabel">{{ _('Edit Participant') }}</h4>
