--- a/apollo/frontend/templates/frontend/participant_list.html
+++ b/apollo/frontend/templates/frontend/participant_list.html
@@ -61,7 +61,7 @@ a:hover.arrow-style{text-decoration:none; color:#333;}
     <div class="row-fluid">
       <div>
         {{ render_pager_counter(participants, args) }}
-        <form class="form-inline" action="{{ request.url }}" method="POST">
+        <form class="form-inline" method="POST">
           {{ form.csrf_token() }}{{ form.select_superset() }}
           <!--<div class="checkbox" style="margin-left:10px;">
             <label>
